add some options and clean up